--- a/excessMana.html
+++ b/excessMana.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Antony Ménard Portfolio</title>
+		<title>Excess Mana</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -45,8 +45,8 @@
 				<!-- Main -->
 					<article id="main">
 						<header>
-							<h2>Portfolio</h2>
-							<p>A more detailed view of all the projects i've worked on</p>
+							<h2>Excess Mana</h2>
+							<p>Tower-defense in Unity for a game jam</p>
 						</header>
 						<section class="wrapper style5">
 							<div class="inner">
@@ -68,18 +68,17 @@
 					</article>
 
 				<!-- Footer -->
-					<footer id="footer">
-						<ul class="icons">
-							<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
-							<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
-							<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
-							<li><a href="#" class="icon brands fa-dribbble"><span class="label">Dribbble</span></a></li>
-							<li><a href="#" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
-						</ul>
-						<ul class="copyright">
-							<li>&copy; Untitled</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
-						</ul>
-					</footer>
+				<footer id="footer">
+					<ul class="icons">
+						<li><a href="https://www.linkedin.com/in/antony-m%C3%A9nard-923083182/" class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></li>
+						<li><a href="https://github.com/AntonyMenard" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
+						<li><a href="https://gitlab.com/AntonyMenard604" class="icon brands fa-gitlab"><span class="label">GitLab</span></a></li>
+						<li><a href="#" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
+					</ul>
+					<ul class="copyright">
+						<li>&copy; Untitled</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+					</ul>
+				</footer>
 
 			</div>
 
