--- a/cv.html
+++ b/cv.html
@@ -78,7 +78,7 @@
 										<li>Student Staff - Beneva
 											<p>March 2020 - August 2020 <br>
 												-Analyze existing features and, if need be, define new solutions to the needs of systems<br>
-												-Automate the Beneva's mobile app build with HitHub Actions<br>											</p>
+												-Automate the Beneva's mobile app build with GitHub Actions<br>											</p>
 										</li>
 										<li>Internship - Beneva
 											<p>May 2019 - August 2019 <br>
